--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -12,11 +12,11 @@ body {
 }
 
 div#interface {
-	width: 900px; /*tamanho da largura da interface toda*/
+	width: 900px;
 	background-color: #ffffff;
-	margin: -20px auto 0px auto;  /*cima, direita, baixo, esquerda*/ /*auto fica controlado automaticamente pelo navegador*/
-	box-shadow: 0px 0px 10px rgba(0,0,0,.3); /*sombra -- deslocamento lateral, desloca vertical, espalhamento da sombra, cor da sombra*/
-	padding: 10px; /*interna -- isso equivale a 10px 10px 10px 10px*/
+	margin: -20px auto 0px auto;
+	box-shadow: 0px 0px 10px rgba(0,0,0,.3);
+	padding: 10px;
 }
 
 p {
@@ -40,7 +40,7 @@ header#cabecalho img#icone {
 }
 
 header#cabecalho {
-	border-bottom: 1px #606060 solid; /*largura, cor, tipo*/
+	border-bottom: 1px #606060 solid;
 	height: 150px;
 	background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 90px;
 }
@@ -65,7 +65,7 @@ header#cabecalho h2 {
 	/*Formatação de imagens com legendas*/
 
 figure.foto-legenda {
-	position: relative;  /*relative de acordo onde ta no codigo html*/
+	position: relative;
 	border: 8px solid white;
 	box-shadow: 1px 1px 4px black;
 }
@@ -76,15 +76,15 @@ figure.foto-legenda img {
 }
 
 figure.foto-legenda figcaption {
-	opacity: 0; /*opacidade*/
-	position: absolute; /*posicão absoluta*/
+	opacity: 0;
+	position: absolute;
 	top: 0px;
-	background-color: rgba(0,0,0,.4);  /*Cor rgb + trasnparencia*/
+	background-color: rgba(0,0,0,.4);
 	color: white;
-	width: 100%; /*usa 100% da largura */
-	height: 100%; /*usa 100% da altura */
+	width: 100%;
+	height: 100%;
 	padding: 10px;
-	box-sizing: border-box;  /*um box  dentro da borda*/
+	box-sizing: border-box;/
 	transition: opacity 1s;
 }
 
@@ -94,41 +94,41 @@ figure.foto-legenda:hover figcaption {
 
 	/*Formatação do Menu*/
 
-nav#menu { /*formataçao de todo o menu*/
-	display: block; /*exibe o menu como um bloco (um bloco pode flutuar pela tela)*/
+nav#menu { 
+	display: block;
 }
 
-nav#menu ul { /*formatação para toda lista ul*/
-	list-style: none; /*Sumir com os marcadores*/
-	text-transform: uppercase; /*Letras maiúsculas*/
-	position: absolute; /*passa por cima dos documentos, uma posição relativa fica presa dentro do conteine r, absoluta fica livre no site*/
-	top: -20px; /*diminui a margem padrao, assim o menu ficara colado no "teto"*/
+nav#menu ul {
+	list-style: none;
+	text-transform: uppercase;
+	position: absolute;
+	top: -20px;
 	left: 35%;
 }
 
-nav#menu li { /*formatação para cada item da lista*/
-	display: inline-block; /*blocos exibidos na mesma linha (menu horizontal)*/
+nav#menu li {
+	display: inline-block;
 	background-color: #dddddd;
-	padding: 10px; /*cria um espaço dentro do "bloco"*/
-	margin: 0px -1.5px 0px -1.5px; /*controla o espaço de fora do objeto, no caso entre os botoes, o 2px vai ser 4px no total entre 2 botoes, 2px para um 2px para outro*/
-	transition: background-color 1s; /*transição*/
+	padding: 10px;
+	margin: 0px -1.5px 0px -1.5px;
+	transition: background-color 1s;
 }
 
-nav#menu li:hover { /*ao passar o mouse sobre o li*/
+nav#menu li:hover {
 	background-color: #606060; 
 }
 
-nav#menu h1 { /*formatação para todos h1*/
-	display: none; /*esconde visualmente mas deixa identificado na documentação*/
+nav#menu h1 {
+	display: none;
 }
 
-nav#menu a { /*formatação para todas a*/
-	color: #000000; /*link preto*/
-	text-decoration: none; /*sem sublinhado*/
+nav#menu a {
+	color: #000000;
+	text-decoration: none;
 }
 
-nav#menu a:hover { /*quando o mouse passar em cima*/
-	color: #ffffff; /*a cor do link ficara branco*/
+nav#menu a:hover {
+	color: #ffffff;
 }
 
 	/*Formatação das divisões*/
@@ -136,7 +136,7 @@ nav#menu a:hover { /*quando o mouse passar em cima*/
 section#corpo {
 	display: block;
 	width: 500px;
-	float: left; /*flute pelo lado esquerdo*/
+	float: left;
 	border-right: 1px solid #606060;
 	padding-right: 15px; 
 }
@@ -175,8 +175,8 @@ header#cabecalho_artigo h3{
 
 table#tabelaspec {
 	border: 1px solid #606060;
-	border-spacing: 0px; /*espaço entreas celulas*/
-	margin-left: auto; /*centralizando a tabela*/
+	border-spacing: 0px;
+	margin-left: auto;
 	margin-right: auto;
 
 }
@@ -218,7 +218,7 @@ table#tabelaspec caption span{
 aside#lateral {
 	display: block;
 	width: 350px;
-	float: right; /*flutue pelo lado direito*/
+	float: right;
 	background-color: #dddddd;
 	padding: 10px;
 	margin-top: 10px;
@@ -240,7 +240,7 @@ aside#lateral h2{
 }
 
 footer#rodape {
-	clear: both; /*esse conteudo ficara fora da divisao de section e aside*/
+	clear: both;
 	border-top: 1px solid #606060;
 }
 
